# papagame

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SPECIFICATION.md  coi-serviceworker.js  game.c  host.c  index.html  runner.js  worker.js
.github/workflows/: deploy.yml  release.yml
examples/: Makefile  audio_test.c  buttons_test.c  test_16bpp.c  test_32bpp.c  test_8bpp.c
examples/audio/: main.c
examples/c/: audio_test.c  buttons_test.c  fallback_test.c  terminal_test.c  test_16bpp.c  test_32bpp.c  test_8bpp.c
examples/c/audio/: main.c
examples/c/draw/: Makefile  image.h  main.c  patch.py
examples/c/images/: Makefile  image16.h  image32.h  image8.h  main.c
examples/c/roguelike/: Makefile  main.c
examples/c/tracker/: main.c  main2.c
examples/c/tracker2/: main.c
examples/draw/: Makefile  image.raw  main.c
examples/images/: Makefile  main.c
examples/roguelike/: Makefile  main.c
examples/roguelike/data/: sprites.h
lib/: olive.h  wagnostic.h
runners/native/: host.c  ncurses_host.c
runners/web/: index.html  runner.js  style.css
tools/: img2fb.sh
